<resources>
    <string name="app_name">Fundoo Notes</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">OR</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset">Reset</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_sign_in">Already Registered ? Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="archive">Archive</string>
    <string name="settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="archive_fragment">Archive Fragment</string>
    <string name="notes_fragment">Notes Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="update_notes">Update Notes</string>
    <string name="all_notes">All Notes</string>
    <string name="create_note">Create Note</string>
    <string name="save_note">Save note</string>
    <string name="write_notes_here">Write notes here</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <string name="update_note">Update note</string>
    <string name="omprasad_rathod">Omprasad Rathod</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="user_name">User Name</string>
    <string name="useremail">userEmail</string>
    <string name="search_note">Search note</string>
</resources>