<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item android:title="@string/home"
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item android:title="@string/notes"
            android:id="@+id/notes"
            android:icon="@drawable/ic_baseline_notes_24"/>
        <item android:title="@string/archive"
            android:id="@+id/archive"
            android:icon="@drawable/ic_baseline_archive_24"/>
        <item android:title="@string/settings"
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
        <item android:title="@string/logout"
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_login_24"/>
    </group>
</menu>